public enum DamCalculationStatus{
    COMPLETED, IN_PROGRESS, CANCELLED
}