public class IrrigationSystem
{
    public Guid IrrigationSystemId { get; set; }
    public required string IrrigationSystemName { get; set; }
    public string? IrrigationSystemDescription { get; set;}
    public string? IrrigationSystemModel { get; set;}
}