public class River
{
    public Guid RiverId { get; set;}
    public required string RiverName { get; set; }
}