public enum WaterSourceType
{
    SURFACE, BOREHOLE, STREAM
}